# homelab

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mise.toml  mkdocs.yml  pyproject.toml  rumdl.toml  sample.yaml  values.yaml  zensical.toml
.codex/environments/: environment.toml
.github/workflows/: docs.yml  mkdocs.yaml
Setup/cluster-setup/: index.html
apps/lab/: kustomization.yaml
assets/stylesheets/: extra.css
cluster/lab/: apps.yaml  infrastructure.yaml  monitoring.yaml
clusters/lab/: apps.yaml  infrastructure-configs.yaml  infrastructure-controllers.yaml  infrastructure.yaml  metallb-config.yaml  monitoring.yaml
diagram/: homelab-current.d2
docs/: CNAME  adding-a-service.md  index.md  repository-structure.md
docs/Apps/: vault.md
docs/Setup/: cluster-setup.md  repository-structure.md
docs/apps/: homepage.md  index.md  linkding.md  postiz.md
docs/architecture/: index.md  platform.md  secrets-flow.md  traffic-flow.md
docs/gitops/: adding-a-service.md  index.md  reconciliation.md  repository-structure.md
docs/platform/: index.md  nvidia-gpu.md  talos-linux.md
docs/runbooks/: cloudflared-tunnel.md  cloudflared-vault-credentials.md  index.md  vault-bootstrap.md  vault-recovery.md
docs/services/: cloudflared.md  cloudnative-pg.md  external-secrets.md  flux.md  gpu-operator.md  index.md  kube-prometheus-stack.md  local-path-provisioner.md  metallb.md  metrics-server.md  traefik.md  vault.md
scripts/: d2_to_output.sh  enter_project.sh
search/: search_index.json
(+200 files in other folders)
