[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "mkdocs-callouts>=1.16.0",
    "mkdocs-material>=9.6.2",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-roamlinks-plugin>=0.3.2",
    "pillow>=11.1.0",
    "pymdown-extensions>=10.14.3",
    "termynal>=0.13.0",
]
